# dayu-agent

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-offline.yml
constraints/: lock-common-py311.txt  lock-linux-x64-py311.txt  lock-macos-arm64-py311.txt  lock-macos-x64-py311.txt  lock-windows-x64-py311.txt
dayu/: README.md  docling_runtime.py  log.py
dayu/cli/: arg_parsing.py  dependency_setup.py  interactive_ui.py  main.py
dayu/config/: README.md  llm_models.json  run.json
dayu/contracts/: agent_execution.py  fins.py  host_execution.py  run.py
dayu/fins/: README.md  cli.py  cli_support.py  service_runtime.py  ticker_normalization.py
dayu/host/: README.md  concurrency.py  executor.py  host.py  prepared_turn.py  protocols.py  run_registry.py  scene_preparer.py  session_registry.py  startup_preparation.py
dayu/process_lifecycle/: coordinator.py
dayu/render/: before.html  excel-window-template.xlsx  render.py
dayu/services/: chat_service.py  concurrency_lanes.py  contract_preparation.py  fins_service.py  prompt_contributions.py  prompt_service.py  protocols.py  startup_preparation.py  write_service.py
dayu/wechat/: runtime.py
docs/: code_review.md  github_main_workflow.md
tests/: README.md  test_build_offline_bundle.py
tests/application/: test_chat_service.py  test_concurrency.py  test_contract_preparation.py  test_host_admin_service.py  test_host_executor.py  test_host_executor_lane_stacking.py  test_host_logging.py  test_host_public_helpers.py  test_host_shutdown.py  test_pending_turn_store.py  test_prompt_service.py  test_run_registry.py  test_scene_execution.py  test_service_startup_preparation.py  test_session_registry.py  test_wechat_daemon.py  test_wechat_outbox_integration.py  test_write_service.py
tests/cli/: test_init_command.py  test_main.py
tests/contracts/: test_agent_execution.py
tests/engine/: test_cli_interactive_coverage.py  test_cli_running_config.py  test_docling_runtime.py  test_prompt_assets.py  test_prompt_composer.py  test_render_script.py  test_web_tools.py  test_write_pipeline.py
tests/fins/: legacy_repository_adapters.py  test_cli_helpers_coverage.py  test_cn_pipeline.py  test_cn_pipeline_helpers.py  test_docling_upload_service.py  test_fins_runtime_tool_service.py  test_fins_tools_service.py  test_fmp_company_alias_resolver.py  test_helper_modules_extra.py  test_ingestion_factory.py  test_ingestion_tools.py  test_pipeline_cli.py  test_sec_company_meta.py  test_sec_pipeline_download.py  test_sec_pipeline_download_stream.py  test_sec_pipeline_helpers.py  test_sec_pipeline_http_cache.py  test_sec_pipeline_process.py  test_sec_pipeline_process_filing_source.py  test_sec_pipeline_process_material.py  test_sec_pipeline_rejection_registry.py  test_sec_pipeline_upload_filing_stream.py  test_sec_pipeline_upload_material_stream.py  (+5 more)
utils/: build_offline_bundle.py
(+53 files in other folders)
